ConsulConnect/artifacts/web-externalservice.yml
apiVersion: v1
kind: Service
metadata:
  name: localhost
  namespace: default
spec:
  externalName: localhost
  ports:
  - port: 9090
    protocol: TCP
  type: ExternalName
